--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,19 @@ plugins {
     id("com.github.johnrengelman.shadow") version "7.0.0"
     id("io.micronaut.application") version "1.5.0"
     id("org.jetbrains.kotlin.plugin.allopen") version "1.4.32"
+    id 'net.researchgate.release' version '2.8.1'
+    id 'maven-publish'
 }
-
-version = "2.0.3"
-group = "micronaut.demo"
 
 repositories {
     mavenCentral()
+    maven {
+        url 'https://customer-wave-775846179576.d.codeartifact.us-east-1.amazonaws.com/maven/customer-wave/'
+        credentials {
+            username "aws"
+            password System.env.CODEARTIFACT_AUTH_TOKEN
+        }
+    }
 }
 
 micronaut {
@@ -66,6 +72,64 @@ tasks {
             jvmTarget = "11"
         }
     }
+}
 
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            groupId = "${group}"
+            artifactId = "${artifactId}"
+            version = "${version}"
+            from components.java
+        }
+    }
+    repositories {
+        maven {
+            url 'https://customer-wave-775846179576.d.codeartifact.us-east-1.amazonaws.com/maven/customer-wave/'
+            credentials {
+                username "aws"
+                password System.env.CODEARTIFACT_AUTH_TOKEN
+            }
+        }
+    }
+}
 
+release {
+    failOnCommitNeeded = false
+    failOnPublishNeeded = true
+    failOnSnapshotDependencies = true
+    failOnUnversionedFiles = true
+    failOnUpdateNeeded = true
+    revertOnFail = true
+    preCommitText = ''
+    preTagCommitMessage = '[Gradle Release Plugin] - pre tag commit: '
+    tagCommitMessage = '[Gradle Release Plugin] - creating tag: '
+    newVersionCommitMessage = '[Gradle Release Plugin] - new version commit: '
+    tagTemplate = '${version}'
+    versionPropertyFile = 'gradle.properties'
+    versionProperties = []
+    snapshotSuffix = '-SNAPSHOT'
+    buildTasks = ['build']
+    ignoredSnapshotDependencies = []
+    pushReleaseVersionBranch = false
+    scmAdapters = [
+            net.researchgate.release.GitAdapter,
+            net.researchgate.release.SvnAdapter,
+            net.researchgate.release.HgAdapter,
+            net.researchgate.release.BzrAdapter
+    ]
+
+    git {
+        requireBranch = 'master'
+        pushToRemote = 'origin'
+        pushToBranchPrefix = ''
+        commitVersionFileOnly = false
+        signTag = false
+    }
+
+    svn {
+        username = null
+        password = null
+        pinExternals = false   // allows to pin the externals when tagging, requires subversion client >= 1.9.0
+    }
 }
