--- a/build.gradle
+++ b/build.gradle
@@ -122,7 +122,7 @@ release {
     git {
         requireBranch = 'master'
         pushToRemote = 'origin'
-        pushToBranchPrefix = ''
+        pushToBranchPrefix = 'release-'
         commitVersionFileOnly = false
         signTag = false
     }
