teste release plugin

--- a/build.gradle
+++ b/build.gradle
@@ -91,7 +91,7 @@ scmVersion {
     ignoreUncommittedChanges = false
 
     checks {
-        aheadOfRemote = false
+        aheadOfRemote = true
     }
 
     nextVersion {
