--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 micronautVersion=2.5.4
 kotlinVersion=1.4.32
-version=0.1.0-SNAPSHOT
+pl.allegro.tech.build.axion.release.domain.hooks.HookContext@6416978e
 group=micronaut.demo
