--- a/build.gradle
+++ b/build.gradle
@@ -100,7 +100,11 @@ scmVersion {
     }
 
     hooks {
-        pre 'fileUpdate', [file: 'gradle.properties', pattern: {v,p -> /version=$v-SNAPSHOT/}, replacement: {v, p -> "$p"}]
+        pre 'fileUpdate', [
+                file       : 'gradle.properties',
+                pattern    : { v, p -> /version=$v-SNAPSHOT/ },
+                replacement: { v, p -> "version=$v-SNAPSHOT" }
+        ]
         pre 'commit'
     }
 }
